# lingua-rs

./: .gitignore  Cargo.toml  README.md  codecov.yml
.github/: dependabot.yml  labeler.yml
.github/workflows/: actionlint.yml  ci.yml  dependabot-pr-automerge.yml  labeler.yml  release.yml
crate/: Cargo.toml  README.md  build.rs
crate/src/: lib.rs
crate/tests/: detect.rs
package/: Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml  postinstall.js  tsconfig.json  vitest.config.ts
package/__tests__/: lingua-rs.test.ts  postinstall.test.ts
package/src/: lib.rs
